; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_imx7d_adc.c_imx7d_adc_feature_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_imx7d_adc.c_imx7d_adc_feature_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx7d_adc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@IMX7D_ADC_ANALOG_CLK_PRE_DIV_4 = common dso_local global i32 0, align 4
@IMX7D_ADC_AVERAGE_NUM_32 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.imx7d_adc*)* @imx7d_adc_feature_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imx7d_adc_feature_config(%struct.imx7d_adc* %0) #0 {
  %2 = alloca %struct.imx7d_adc*, align 8
  store %struct.imx7d_adc* %0, %struct.imx7d_adc** %2, align 8
  %3 = load i32, i32* @IMX7D_ADC_ANALOG_CLK_PRE_DIV_4, align 4
  %4 = load %struct.imx7d_adc*, %struct.imx7d_adc** %2, align 8
  %5 = getelementptr inbounds %struct.imx7d_adc, %struct.imx7d_adc* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 2
  store i32 %3, i32* %6, align 4
  %7 = load i32, i32* @IMX7D_ADC_AVERAGE_NUM_32, align 4
  %8 = load %struct.imx7d_adc*, %struct.imx7d_adc** %2, align 8
  %9 = getelementptr inbounds %struct.imx7d_adc, %struct.imx7d_adc* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i32 %7, i32* %10, align 4
  %11 = load %struct.imx7d_adc*, %struct.imx7d_adc** %2, align 8
  %12 = getelementptr inbounds %struct.imx7d_adc, %struct.imx7d_adc* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 1, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
